<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Top Section -->
    <LinearLayout
        android:id="@+id/topSection"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/purple_500"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <!-- FrameLayout for Circular Progress Bar -->
    <FrameLayout
        android:id="@+id/totalGradeLayout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:translationY="-100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSection">

        <!-- Circular Progress Bar Background -->

        <View
            android:id="@+id/backgroundCircle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:padding="5dp" />

        <com.example.cpr_assist.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="202dp"
            android:layout_height="202dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Total Grade Label -->
        <TextView
            android:id="@+id/totalGradeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="18dp"
            android:text="@string/total_grade"
            android:textColor="@color/purple_500"
            android:translationY="-40dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/circularProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Total Grade Value -->

    </FrameLayout>

    <!-- Connect Button -->
    <Button
        android:id="@+id/connectButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_500"
        android:background="@drawable/button_rounded"
        android:text="@string/connect"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:translationY="237dp"
        app:layout_constraintEnd_toStartOf="@id/disconnectButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Disconnect Button -->
    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-8dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/button2_rounded"
        android:text="@string/disconnect"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:translationY="237dp"
        app:layout_constraintEnd_toEndOf="@+id/summarySection"
        app:layout_constraintStart_toEndOf="@id/connectButton"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Summary Section -->
    <LinearLayout
        android:id="@+id/summarySection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:translationY="290dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Total Compressions -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_compressions"
                android:textColor="#4D4D4D"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalCompressions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_number"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Correct Weight Compressions -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/correct_weight_compressions"
                android:textColor="#4D4D4D"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/correctWeightCompressions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_number"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold" />
            />
        </LinearLayout>

        <!-- Correct Frequency Compressions -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/correct_frequency_compressions"
                android:textColor="#4D4D4D"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/correctFrequencyCompressions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_number"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold" />
            />
        </LinearLayout>
    </LinearLayout>


    <!-- Grades Section Header -->
    <TextView
        android:id="@+id/gradesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grades"
        android:textColor="#6200ED"
        android:textSize="24sp"
        android:textStyle="bold"
        android:translationY="480dp"
        android:translationX="-139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topSection" />


    <!-- Grades Section -->
    <LinearLayout
        android:id="@+id/gradesSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:translationY="510dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Correct Compression Weight Grade -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textStyle="bold"
                android:textColor="#4D4D4D"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/weightGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_grade"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:textSize="20sp" /> />
        </LinearLayout>

        <!-- Frequency Grade -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frequency"
                android:textColor="#4D4D4D"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/frequencyGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_grade"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:textSize="20sp" /> />
        </LinearLayout>

        <!-- Angle Grade -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/angle"
                android:textColor="#4D4D4D"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/angleGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_grade"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:textSize="20sp" /> />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
